--- a/Untitled1.ipynb
+++ b/Untitled1.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled1.ipynb",
       "provenance": [],
-      "include_colab_link": true
+      "toc_visible": true
     },
     "kernelspec": {
       "name": "python2",
@@ -14,34 +14,47 @@
   },
   "cells": [
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/ganesh5867/python-developer/blob/main/Untitled1.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
       "metadata": {
         "id": "LtmMnLUG0U6L"
       },
       "cell_type": "code",
-      "source": [],
-      "execution_count": null,
+      "source": [
+        "import numpy as np\n"
+      ],
+      "execution_count": 9,
       "outputs": []
     },
     {
       "metadata": {
-        "id": "iH1oEngB02Zv"
+        "id": "iH1oEngB02Zv",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "43e84268-664c-451a-d536-cb056171660f"
       },
       "cell_type": "code",
       "source": [
-        "!pip install --upgrade -q gspread"
+        "arr1=np.arange(24).reshape(6,4)\n",
+        "arr1"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[ 0,  1,  2,  3],\n",
+              "       [ 4,  5,  6,  7],\n",
+              "       [ 8,  9, 10, 11],\n",
+              "       [12, 13, 14, 15],\n",
+              "       [16, 17, 18, 19],\n",
+              "       [20, 21, 22, 23]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 10
+        }
+      ]
     },
     {
       "metadata": {
@@ -56,553 +69,31 @@
     },
     {
       "metadata": {
-        "id": "6UbkNzJn1Um3"
+        "id": "6UbkNzJn1Um3",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 374
+        },
+        "outputId": "a1266caf-276e-4869-c5c6-4d5d33c5cf56"
       },
       "cell_type": "code",
       "source": [],
       "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "# New Section"
-      ],
-      "metadata": {
-        "id": "CLE9L8iUeKpX"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "import numpy as np"
-      ],
-      "metadata": {
-        "id": "4IstfqOweZ2T"
-      },
-      "execution_count": 2,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "arr11=np.arange(24).reshape(4,6)\n",
-        "arr11"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "1jOl23TTfbdx",
-        "outputId": "cc677bb0-8a23-461b-f9db-34814bad1922"
-      },
-      "execution_count": 3,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "array([[ 0,  1,  2,  3,  4,  5],\n",
-              "       [ 6,  7,  8,  9, 10, 11],\n",
-              "       [12, 13, 14, 15, 16, 17],\n",
-              "       [18, 19, 20, 21, 22, 23]])"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 3
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "arr12=np.arange(24).reshape(6,4)\n",
-        "arr12"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "Kaovnq3ifbaY",
-        "outputId": "f8920dd9-a9d3-4b33-cf6d-f8a9ee9374e5"
-      },
-      "execution_count": 5,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "array([[ 0,  1,  2,  3],\n",
-              "       [ 4,  5,  6,  7],\n",
-              "       [ 8,  9, 10, 11],\n",
-              "       [12, 13, 14, 15],\n",
-              "       [16, 17, 18, 19],\n",
-              "       [20, 21, 22, 23]])"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 5
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "arr12[3]"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "H8ClqlOtfbWf",
-        "outputId": "771cf52e-c795-4cc5-8086-0c8c220193d7"
-      },
-      "execution_count": 6,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "array([12, 13, 14, 15])"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 6
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "arr12[2:4]"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "FafhjzSJfbT6",
-        "outputId": "45d8b9f6-462e-4bfd-a791-ca306e7e9711"
-      },
-      "execution_count": 7,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "array([[ 8,  9, 10, 11],\n",
-              "       [12, 13, 14, 15]])"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 7
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "arr12[:,3]"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "2M7b3QbdfbRZ",
-        "outputId": "d6ae1982-92e2-46fb-dc63-cc31fc01d056"
-      },
-      "execution_count": 8,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "array([ 3,  7, 11, 15, 19, 23])"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 8
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "arr12[:,1:3]"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "kxHKy3kTfbPK",
-        "outputId": "2b68f79b-5cd5-4691-c77a-492b01616ece"
-      },
-      "execution_count": 9,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "array([[ 1,  2],\n",
-              "       [ 5,  6],\n",
-              "       [ 9, 10],\n",
-              "       [13, 14],\n",
-              "       [17, 18],\n",
-              "       [21, 22]])"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 9
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "wFu31m69jk0t"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "arr12[:,0:2]"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "YhSSIgJDfbL7",
-        "outputId": "f4a5c302-7055-43b2-d242-352ffbdb39ee"
-      },
-      "execution_count": 10,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "array([[ 0,  1],\n",
-              "       [ 4,  5],\n",
-              "       [ 8,  9],\n",
-              "       [12, 13],\n",
-              "       [16, 17],\n",
-              "       [20, 21]])"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 10
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "arr12"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "GbGoX1V6fbGm",
-        "outputId": "1b67e578-c4c3-47e7-d429-5e215fd08763"
-      },
-      "execution_count": 11,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "array([[ 0,  1,  2,  3],\n",
-              "       [ 4,  5,  6,  7],\n",
-              "       [ 8,  9, 10, 11],\n",
-              "       [12, 13, 14, 15],\n",
-              "       [16, 17, 18, 19],\n",
-              "       [20, 21, 22, 23]])"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 11
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "arr12[2:4,1:3]"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "WyO9PR4ffbEI",
-        "outputId": "9b9e56ff-31d2-4c34-f4e7-e07184334e4f"
-      },
-      "execution_count": 17,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "array([[ 9, 10],\n",
-              "       [13, 14]])"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 17
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "arr12[4: ,2: ]"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "Yp2I8BYKfbB8",
-        "outputId": "45cee5f2-46a5-49a3-bd80-d180250e2020"
-      },
-      "execution_count": 19,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "array([[18, 19],\n",
-              "       [22, 23]])"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 19
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "for i in arr12:\n",
-        "  print(i)"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "KrdM2a4Afa_U",
-        "outputId": "da7c9c80-c38f-4405-be65-2124808a02ec"
-      },
-      "execution_count": 20,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "[0 1 2 3]\n",
-            "[4 5 6 7]\n",
-            "[ 8  9 10 11]\n",
-            "[12 13 14 15]\n",
-            "[16 17 18 19]\n",
-            "[20 21 22 23]\n"
+          "output_type": "error",
+          "ename": "ImportError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m\u001b[0m",
+            "\u001b[0;31mImportError\u001b[0mTraceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-6-a2da4ed0467d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mauth\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mauthenticate_user\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mgspread\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0moauth2client\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mclient\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mGoogleCredentials\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mImportError\u001b[0m: No module named gspread",
+            "",
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0;32m\nNOTE: If your import is failing due to a missing package, you can\nmanually install dependencies using either !pip or !apt.\n\nTo view examples of installing some common dependencies, click the\n\"Open Examples\" button below.\n\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n"
           ]
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "arr1=np.array([1,2,3,4,5])\n",
-        "arr2=np.array([6,7,8,9,10])"
-      ],
-      "metadata": {
-        "id": "c50PYa_omxc2"
-      },
-      "execution_count": 24,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "arr1+arr2"
-      ],
-      "metadata": {
-        "id": "-8wdcLXUmxWf",
-        "outputId": "840f801f-3593-4436-f96c-163769cc5d70",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": 25,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "array([ 7,  9, 11, 13, 15])"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 25
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "arr1/arr2"
-      ],
-      "metadata": {
-        "id": "VDaLaOdQmxTo",
-        "outputId": "77f0ef78-d515-4e3e-cb54-04c4eb1b621a",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": 26,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "array([0.16666667, 0.28571429, 0.375     , 0.44444444, 0.5       ])"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 26
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "arr1**2"
-      ],
-      "metadata": {
-        "id": "L2Yp8pgYmxRe",
-        "outputId": "10df8ef6-f8c9-4dd9-8690-aaac3abdeddd",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": 28,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "array([ 1,  4,  9, 16, 25])"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 28
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "arr2**3"
-      ],
-      "metadata": {
-        "id": "7hJLSk7ImxOo",
-        "outputId": "630fecf5-c429-4e29-8a4e-f9400d65d043",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": 29,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "array([ 216,  343,  512,  729, 1000])"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 29
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "arr1>3"
-      ],
-      "metadata": {
-        "id": "BhlM_wM5mxHL",
-        "outputId": "ac3a9ad6-3e48-4b6c-ac55-a1110ffcde57",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": 32,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "array([False, False, False,  True,  True])"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 32
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "arr1[arr1>3]"
-      ],
-      "metadata": {
-        "id": "9cxpVa-emxEz",
-        "outputId": "99cfbae4-8961-40e2-c1b0-b080c52fdd03",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": 33,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "array([4, 5])"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 33
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "P4lLlN2MmxB5"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "fAde2MGVmw_I"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "tzCTmNgEmw8p"
-      },
-      "execution_count": null,
-      "outputs": []
     }
   ]
 }
